# ecs-ai

./: Cargo.toml  rust-toolchain.toml
saves/: new_save.txt  resource.txt  save.txt  test_save.txt
src/: application.rs  battle.rs  game_assets.rs  grid.rs  grid_plugin.rs  input.rs  main.rs  movement.rs  pathfinder.rs  physics.rs  resources_and_components.rs  util.rs  walls_builder.rs
src/maze/: maze.rs  mod.rs  plugin.rs
src/util/: array2d.rs  file_io.rs  mod.rs  pathfinding.rs
