[package]
name = "ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
bevy = {version = "0.5" }
anyhow = { version = "1.0.45" }

derive_more = { version = "0.99", features = ["deref", "deref_mut"] }
